--- a/package.json
+++ b/package.json
@@ -2,13 +2,28 @@
   "name": "patentes-diplomaticas",
   "version": "1.0.0",
   "description": "Traductor de patentes diplomáticas para identificar el país o institución",
+  "license": "MIT",
+  "author": "Ezequiel Gatica",
   "scripts": {
     "dev": "tailwindcss -i ./assets/styles/patentes-input.css -o ./assets/styles/patentes-output.css --watch",
     "build": "tailwindcss -i ./assets/styles/patentes-input.css -o ./assets/styles/patentes-output.css --minify",
-    "test:e2e": "cypress run"
+    "test:e2e": "cypress run",
+    "test:coverage": "jest --coverage",
+    "test": "jest"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    }
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "babel-jest": "^29.0.0",
     "cypress": "^14.1.0",
+    "jest": "^29.0.0",
+    "jest-environment-jsdom": "^29.7.0",
     "tailwindcss": "^3.3.3"
   }
 }
