--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "dev": "tailwindcss -i ./assets/styles/patentes-input.css -o ./assets/styles/patentes-output.css --watch",
     "build": "tailwindcss -i ./assets/styles/patentes-input.css -o ./assets/styles/patentes-output.css --minify",
     "test:e2e": "cypress run",
+    "test:unit": "jest",
     "test:coverage": "jest --coverage",
-    "test": "jest"
+    "test": "npm run test:unit && npm run test:e2e"
   },
   "jest": {
     "testEnvironment": "jsdom",
@@ -24,6 +25,7 @@
     "cypress": "^14.1.0",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.7.0",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "leaflet": "^1.9.4"
   }
 }
